Creating style (CSS) for the layout

--- a/todo-app/src/styles.css
+++ b/todo-app/src/styles.css
@@ -1,12 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   height:100vh;
-  background: #3023ae;
   display: flex;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   text-align: center;
+  justify-content: center;
+  background: #3023ae;
   background: -moz-linear-gradient(60deg, #3023ae 0%, #c86dd7 100%);
   background: -webkit-linear-gradient(60deg, #3023ae 0%, #c86dd7 100%);
   background: linear-gradient(60deg, #3023ae 0%, #c86dd7 100%);
@@ -15,10 +16,16 @@ body {
 
 button {
   cursor: pointer;
+  border: none;
+}
+
+button>i {
+  border: none;
 }
 
 ul {
-  text-align: center;
+  min-width: 600px;
+  text-align: left;
   margin: 10px;
   padding: 10px;
   list-style: none;
@@ -33,6 +40,7 @@ ul {
 li {
   padding: 15px;
   margin: 10px;
+  min-width: 200px;
   font-size: 1em;
   font-style: italic;
   border-bottom: 2px solid rgba(0, 0, 0, 0.2);
@@ -61,7 +69,6 @@ li>button:hover {
 
 .text-center {
   text-align: center;
-  /* place-items: center; */
 }
 
 .button {
@@ -77,9 +84,10 @@ li>button:hover {
 }
 
 #modal {
-  text-align: center;
+  text-align: left;
   margin: 10px;
   padding: 10px;
+  min-width: 600px;
   list-style:none;
   background: #fff;
   border-radius: 10px;
